cabal-version:      2.4
name:               z-http
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Dong
maintainer:         winterland1989@gmail.com

-- A copyright notice.
-- copyright:
category:           Network
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Z.Data.HTTP.Request
                    Z.HTTP.Server
                    Z.HTTP.Client

  -- Modules included in this library but not exported.
  -- other-modules:

  build-depends:      base   >=4.14
                    , case-insensitive == 1.*
                    , Z-Data == 0.7.*
                    , Z-IO   == 0.7.*

  -- Directories containing source files.
  hs-source-dirs:     .
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    CApiFFI
    CPP
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UnboxedTuples
    UnliftedFFITypes
    ViewPatterns


test-suite z-http-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.1.0
